fixing alignement of core funding with blog elements on home and fixing issue with Gravity Form

--- a/wp-content/themes/fondationmolson/static/helpers/css/sass/partials/_content.sass
+++ b/wp-content/themes/fondationmolson/static/helpers/css/sass/partials/_content.sass
@@ -240,7 +240,6 @@ header nav.navbar.navbar-primary .navbar-nav li.wpml-ls-item
     color: $secondary
     ul
       padding: 10px 25px
-      margin-top: 20px
     ul > li
       position: relative
       padding: 2px 0 10px 0
@@ -347,7 +346,6 @@ header nav.navbar.navbar-primary .navbar-nav li.wpml-ls-item
     color: $white
     ul
       padding: 10px 25px
-      margin-top: 20px
     ul > li
       position: relative
       padding: 2px 0 10px 0
