--- a/wp-content/themes/fondationmolson/static/helpers/css/sass/partials/_helpers.sass
+++ b/wp-content/themes/fondationmolson/static/helpers/css/sass/partials/_helpers.sass
@@ -149,6 +149,10 @@ a
     -webkit-justify-content: space-between
     justify-content: space-between
 
+.space-around
+    -webkit-justify-content: space-around
+    justify-content: space-around
+
 .display-flex
     +flex
 
